EMIT_RECEIVE IS WORKING
Dans .ioc BASILIQ: modif de RFM_SPI_nCS de SPI_NSS à un OUTPUT_GPIO

--- a/BASELIQ/BASELIQ.ioc
+++ b/BASELIQ/BASELIQ.ioc
@@ -180,7 +180,7 @@ PC7.Signal=GPXTI7
 PD0.GPIOParameters=GPIO_Label
 PD0.GPIO_Label=RFM_SPI_nCS
 PD0.Locked=true
-PD0.Signal=SPI2_NSS
+PD0.Signal=GPIO_Output
 PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=RFM_SPI_SCK
 PD1.Locked=true
