--- a/LORA_TestBench/LORA_TestBench.ioc
+++ b/LORA_TestBench/LORA_TestBench.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-KeepUserPlacement=false
+KeepUserPlacement=true
 Mcu.CPN=STM32L432KCU3
 Mcu.Family=STM32L4
 Mcu.IP0=NVIC
@@ -17,20 +17,21 @@ Mcu.Name=STM32L432K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
 Mcu.Pin1=PC15-OSC32_OUT (PC15)
-Mcu.Pin10=PA14 (JTCK-SWCLK)
-Mcu.Pin11=PA15 (JTDI)
-Mcu.Pin12=PB3 (JTDO-TRACESWO)
-Mcu.Pin13=PB7
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin10=PA15 (JTDI)
+Mcu.Pin11=PB3 (JTDO-TRACESWO)
+Mcu.Pin12=PB4 (NJTRST)
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PA0
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA4
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB0
-Mcu.Pin9=PA13 (JTMS-SWDIO)
-Mcu.PinsNb=15
+Mcu.Pin6=PA7
+Mcu.Pin7=PB0
+Mcu.Pin8=PA13 (JTMS-SWDIO)
+Mcu.Pin9=PA14 (JTCK-SWCLK)
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L432KCUx
@@ -80,8 +81,6 @@ PA4.GPIO_Label=SPI1_EN
 PA4.Locked=true
 PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PB0.GPIOParameters=GPIO_Label
@@ -92,6 +91,14 @@ PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=LD3 [Green]
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=GPIO_Output
+PB4\ (NJTRST).Locked=true
+PB4\ (NJTRST).Mode=Full_Duplex_Master
+PB4\ (NJTRST).Signal=SPI1_MISO
+PB6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB6.GPIO_Label=SPI1_IRQ
+PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB6.Locked=true
+PB6.Signal=GPXTI6
 PB7.GPIOParameters=PinState,GPIO_Label
 PB7.GPIO_Label=SPI1_CS
 PB7.Locked=true
@@ -189,6 +196,8 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=32000000
 RCC.WatchDogFreq_Value=32000
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI1.CalculateBaudRate=2.5 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
