Ajout de semaphore : NOT WORKING YET
probleme: lorsque l on xSemaphoreTake alors la, on bloque sur cette demande, le HAL_UART_RxCpltCallback qui doit normalement debluouquer la situation n est jamais appele car le proc est bloqué

Soluton: Detailler les eleements en TASKS

--- a/BASELIQ/BASELIQ.ioc
+++ b/BASELIQ/BASELIQ.ioc
@@ -4,22 +4,32 @@ CAD.pinconfig=
 CAD.provider=
 DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
 DAC1.IPParameters=DAC_Channel-DAC_OUT2
+FREERTOS.BinarySemaphores01=xSem_UBXReceive,Dynamic,NULL;xSem_Polling,Dynamic,NULL
+FREERTOS.INCLUDE_uxTaskPriorityGet=0
+FREERTOS.INCLUDE_vTaskDelay=0
+FREERTOS.INCLUDE_vTaskDelete=0
+FREERTOS.INCLUDE_vTaskPrioritySet=0
+FREERTOS.INCLUDE_vTaskSuspend=0
+FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,INCLUDE_vTaskDelete,INCLUDE_vTaskSuspend,INCLUDE_vTaskDelay,configUSE_NEWLIB_REENTRANT,BinarySemaphores01
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L496VGT3
 Mcu.Family=STM32L4
 Mcu.IP0=DAC1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IP7=USART2
-Mcu.IP8=USART3
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP1=FREERTOS
+Mcu.IP10=USB_OTG_FS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SPI2
+Mcu.IP6=SYS
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32L496V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -64,33 +74,37 @@ Mcu.Pin43=PB6
 Mcu.Pin44=PB9
 Mcu.Pin45=PE0
 Mcu.Pin46=PE1
-Mcu.Pin47=VP_SYS_VS_Systick
+Mcu.Pin47=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin48=VP_SYS_VS_Systick
 Mcu.Pin5=PC13
 Mcu.Pin6=PC14-OSC32_IN (PC14)
 Mcu.Pin7=PC15-OSC32_OUT (PC15)
 Mcu.Pin8=PH0-OSC_IN (PH0)
 Mcu.Pin9=PH1-OSC_OUT (PH1)
-Mcu.PinsNb=48
+Mcu.PinsNb=49
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496VGTx
 MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=USB_VBUS_DETECT_WU
 PA0.Locked=true
@@ -442,7 +456,10 @@ USART3.TxPinLevelInvertParam=ADVFEATURE_TXINV_DISABLE
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
+rtos.0.ip=FREERTOS
 isbadioc=false
