--- a/BASELIQ/BASELIQ.ioc
+++ b/BASELIQ/BASELIQ.ioc
@@ -4,15 +4,19 @@ CAD.pinconfig=
 CAD.provider=
 DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
 DAC1.IPParameters=DAC_Channel-DAC_OUT2
-FREERTOS.BinarySemaphores01=xSem_UBXReceive,Dynamic,NULL;xSem_Polling,Dynamic,NULL
-FREERTOS.INCLUDE_uxTaskPriorityGet=0
-FREERTOS.INCLUDE_vTaskDelay=0
-FREERTOS.INCLUDE_vTaskDelete=0
-FREERTOS.INCLUDE_vTaskPrioritySet=0
-FREERTOS.INCLUDE_vTaskSuspend=0
-FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,INCLUDE_vTaskDelete,INCLUDE_vTaskSuspend,INCLUDE_vTaskDelay,configUSE_NEWLIB_REENTRANT,BinarySemaphores01
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.BinarySemaphores01=xSem_GNSSReceive_start,Dynamic,NULL;xSem_LORAReceive_start,Dynamic,NULL;xSem_GNSSReceive_end,Dynamic,NULL
+FREERTOS.INCLUDE_uxTaskPriorityGet=1
+FREERTOS.INCLUDE_vTaskDelay=1
+FREERTOS.INCLUDE_vTaskDelayUntil=1
+FREERTOS.INCLUDE_vTaskDelete=1
+FREERTOS.INCLUDE_vTaskPrioritySet=1
+FREERTOS.INCLUDE_vTaskSuspend=1
+FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,INCLUDE_vTaskDelete,INCLUDE_vTaskSuspend,INCLUDE_vTaskDelay,configUSE_NEWLIB_REENTRANT,BinarySemaphores01,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE,configUSE_TIMERS,configMINIMAL_STACK_SIZE
+FREERTOS.Tasks01=InitTask,2,1024,StartInitTask,Default,NULL,Dynamic,NULL,NULL;ReceivedGNSS,1,2048,ReceivedGNSSTask,Default,NULL,Dynamic,NULL,NULL;ReceivedLORA,1,2048,ReceivedLORATask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configMINIMAL_STACK_SIZE=512
+FREERTOS.configTOTAL_HEAP_SIZE=65536
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
+FREERTOS.configUSE_TIMERS=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -75,7 +79,7 @@ Mcu.Pin44=PB9
 Mcu.Pin45=PE0
 Mcu.Pin46=PE1
 Mcu.Pin47=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin48=VP_SYS_VS_Systick
+Mcu.Pin48=VP_SYS_VS_tim1
 Mcu.Pin5=PC13
 Mcu.Pin6=PC14-OSC32_IN (PC14)
 Mcu.Pin7=PC15-OSC32_OUT (PC15)
@@ -100,7 +104,10 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM1_UP_TIM16_IRQn
+NVIC.TimeBaseIP=TIM1
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -458,8 +465,8 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
