Success Communication PollStatutGnss

--- a/BASELIQ/BASELIQ.ioc
+++ b/BASELIQ/BASELIQ.ioc
@@ -5,13 +5,14 @@ CAD.provider=
 DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
 DAC1.IPParameters=DAC_Channel-DAC_OUT2
 FREERTOS.BinarySemaphores01=xSem_GNSSReceive_start,Dynamic,NULL;xSem_LORAReceive_start,Dynamic,NULL;xSem_GNSSReceive_end,Dynamic,NULL
+FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_uxTaskPriorityGet=1
 FREERTOS.INCLUDE_vTaskDelay=1
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.INCLUDE_vTaskDelete=1
 FREERTOS.INCLUDE_vTaskPrioritySet=1
 FREERTOS.INCLUDE_vTaskSuspend=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,INCLUDE_vTaskDelete,INCLUDE_vTaskSuspend,INCLUDE_vTaskDelay,configUSE_NEWLIB_REENTRANT,BinarySemaphores01,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE,configUSE_TIMERS,configMINIMAL_STACK_SIZE
+FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,INCLUDE_vTaskDelete,INCLUDE_vTaskSuspend,INCLUDE_vTaskDelay,configUSE_NEWLIB_REENTRANT,BinarySemaphores01,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE,configUSE_TIMERS,configMINIMAL_STACK_SIZE,FootprintOK
 FREERTOS.Tasks01=InitTask,2,1024,StartInitTask,Default,NULL,Dynamic,NULL,NULL;ReceivedGNSS,1,2048,ReceivedGNSSTask,Default,NULL,Dynamic,NULL,NULL;ReceivedLORA,1,2048,ReceivedLORATask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=512
 FREERTOS.configTOTAL_HEAP_SIZE=65536
