Update II Restructration RTOS
Ajout de message de debug plus performant, on est aller chercher cette fois la consistence du message et verifier que celui ci était correct:
Reussite du fonctionnement a deux TASK

2METHODES A TESTER : celle qui poll le message TIMEUTC lorsque cela est necessaire VS attraper le message TIMEUTC qui par defaut est present (comme durant la v1)
Pour l'instant le FAKESDuse poll les messages cela permet dans un premier temps de comprendre quelle message part et quelle message arrive.

Probleme:
- HardFault aléatoire : reponse vient de malloc et free qui ne sont pas adapter dans le cadre de TASK il faut utiliser pvPortMalloc et pvPortFree
- Matcher - Failed : il faut reussir a mieux gerer un fail dans la recherche du bon message, en l'état actuel dès qu Match Fail plus rien ne fonctionne, il faut que cette erreur ne soit plus si critique.

--- a/BASELIQ/BASELIQ.ioc
+++ b/BASELIQ/BASELIQ.ioc
@@ -24,7 +24,7 @@ FREERTOS.INCLUDE_vTaskDelete=1
 FREERTOS.INCLUDE_vTaskPrioritySet=1
 FREERTOS.INCLUDE_vTaskSuspend=1
 FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,INCLUDE_vTaskDelete,INCLUDE_vTaskSuspend,INCLUDE_vTaskDelay,configUSE_NEWLIB_REENTRANT,BinarySemaphores01,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE,configUSE_TIMERS,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS
-FREERTOS.Queues01=UARTbyte,16,uint8_t,0,Dynamic,NULL,NULL;UBXQueue,16,UBXMessageQ_t,0,Dynamic,NULL,NULL;GNSS_Request,16,GNSSRequestQ_t,0,Dynamic,NULL,NULL;GNSS_Return,16,GNSSReturnQ_t,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=UARTbyte,1,uint8_t,0,Dynamic,NULL,NULL;UBXQueue,16,UBXMessageQ_t,0,Dynamic,NULL,NULL;GNSS_Request,16,GNSSRequestQ_t,0,Dynamic,NULL,NULL;GNSS_Return,16,GNSSReturnQ_t,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=InitTask,2,1024,StartInitTask,Default,NULL,Dynamic,NULL,NULL;ReceivedLORA,0,2048,ReceivedLORATask,Default,NULL,Dynamic,NULL,NULL;UARTbytet_to_GN,1,512,UARTbyte_to_GNSSMessage_Task,Default,NULL,Dynamic,NULL,NULL;Matcher,0,512,MatcherTask,Default,NULL,Dynamic,NULL,NULL;Fake_SDuse,0,512,Fake_SDuse_Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
 FREERTOS.configMINIMAL_STACK_SIZE=512
@@ -482,7 +482,8 @@ USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.BaudRate=38400
 USART3.DataInvertParam=ADVFEATURE_DATAINV_DISABLE
-USART3.IPParameters=VirtualMode-Asynchronous,BaudRate,DataInvertParam,TxPinLevelInvertParam
+USART3.IPParameters=VirtualMode-Asynchronous,BaudRate,DataInvertParam,TxPinLevelInvertParam,OverrunDisableParam
+USART3.OverrunDisableParam=ADVFEATURE_OVERRUN_ENABLE
 USART3.TxPinLevelInvertParam=ADVFEATURE_TXINV_DISABLE
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
