Update III Restructration RTOS
Factorisation dans ficheir separe

toujorurs probleme lorsque 2 event sont en queue, aucune ne reussit success le matcher

--- a/BASELIQ/BASELIQ.ioc
+++ b/BASELIQ/BASELIQ.ioc
@@ -5,16 +5,26 @@ CAD.provider=
 DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
 DAC1.IPParameters=DAC_Channel-DAC_OUT2
 Dma.Request0=USART1_TX
-Dma.RequestsNb=1
+Dma.Request1=USART3_TX
+Dma.RequestsNb=2
 Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART1_TX.0.Instance=DMA1_Channel4
-Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.USART1_TX.0.MemInc=DMA_MINC_ENABLE
 Dma.USART1_TX.0.Mode=DMA_NORMAL
-Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.1.Instance=DMA1_Channel2
+Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.1.Mode=DMA_NORMAL
+Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.BinarySemaphores01=xSem_LORAReceive_start,Dynamic,NULL;SD_Access_GNSS_Return,Dynamic,NULL;LORA_Access_GNSS_Return,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_uxTaskPriorityGet=1
@@ -23,12 +33,13 @@ FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.INCLUDE_vTaskDelete=1
 FREERTOS.INCLUDE_vTaskPrioritySet=1
 FREERTOS.INCLUDE_vTaskSuspend=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,INCLUDE_vTaskDelete,INCLUDE_vTaskSuspend,INCLUDE_vTaskDelay,configUSE_NEWLIB_REENTRANT,BinarySemaphores01,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE,configUSE_TIMERS,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS
+FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,INCLUDE_vTaskDelete,INCLUDE_vTaskSuspend,INCLUDE_vTaskDelay,configUSE_NEWLIB_REENTRANT,BinarySemaphores01,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE,configUSE_TIMERS,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,configUSE_MALLOC_FAILED_HOOK
 FREERTOS.Queues01=UARTbyte,1,uint8_t,0,Dynamic,NULL,NULL;UBXQueue,16,UBXMessageQ_t,0,Dynamic,NULL,NULL;GNSS_Request,16,GNSSRequestQ_t,0,Dynamic,NULL,NULL;GNSS_Return,16,GNSSReturnQ_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=InitTask,2,1024,StartInitTask,Default,NULL,Dynamic,NULL,NULL;ReceivedLORA,0,2048,ReceivedLORATask,Default,NULL,Dynamic,NULL,NULL;UARTbytet_to_GN,1,512,UARTbyte_to_GNSSMessage_Task,Default,NULL,Dynamic,NULL,NULL;Matcher,0,512,MatcherTask,Default,NULL,Dynamic,NULL,NULL;Fake_SDuse,0,512,Fake_SDuse_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=InitTask,3,1024,StartInitTask,Default,NULL,Dynamic,NULL,NULL;ReceivedLORA,0,2048,ReceivedLORATask,Default,NULL,Dynamic,NULL,NULL;UARTbyte_to_GN,2,512,UARTbyte_to_GNSSMessage_Task,Default,NULL,Dynamic,NULL,NULL;Matcher,0,1024,MatcherTask,Default,NULL,Dynamic,NULL,NULL;Fake_SDuse,0,512,Fake_SDuse_Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
 FREERTOS.configMINIMAL_STACK_SIZE=512
 FREERTOS.configTOTAL_HEAP_SIZE=65536
+FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 FREERTOS.configUSE_TIMERS=1
@@ -111,6 +122,7 @@ Mcu.UserName=STM32L496VGTx
 MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Channel2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
