--- a/BASELIQ/BASELIQ.ioc
+++ b/BASELIQ/BASELIQ.ioc
@@ -4,28 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
 DAC1.IPParameters=DAC_Channel-DAC_OUT2
-Dma.Request0=USART1_TX
-Dma.Request1=USART3_TX
-Dma.RequestsNb=2
-Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.0.Instance=DMA1_Channel4
-Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.USART1_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.0.Mode=DMA_NORMAL
-Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART3_TX.1.Instance=DMA1_Channel2
-Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.1.Mode=DMA_NORMAL
-Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-FREERTOS.BinarySemaphores01=xSem_LORAReceive_start,Dynamic,NULL;SD_Access_GNSS_Return,Dynamic,NULL;LORA_Access_GNSS_Return,Dynamic,NULL
+FREERTOS.BinarySemaphores01=xSem_LORAReceive_start,Dynamic,NULL;SD_Access_GNSS_Return,Dynamic,NULL;LORA_Access_GNSS_Return,Dynamic,NULL;GNSS_UART_Access,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_uxTaskPriorityGet=1
 FREERTOS.INCLUDE_vTaskDelay=1
@@ -34,8 +13,8 @@ FREERTOS.INCLUDE_vTaskDelete=1
 FREERTOS.INCLUDE_vTaskPrioritySet=1
 FREERTOS.INCLUDE_vTaskSuspend=1
 FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskPrioritySet,INCLUDE_uxTaskPriorityGet,INCLUDE_vTaskDelete,INCLUDE_vTaskSuspend,INCLUDE_vTaskDelay,configUSE_NEWLIB_REENTRANT,BinarySemaphores01,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE,configUSE_TIMERS,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,configUSE_MALLOC_FAILED_HOOK
-FREERTOS.Queues01=UARTbyte,1,uint8_t,0,Dynamic,NULL,NULL;UBXQueue,16,UBXMessageQ_t,0,Dynamic,NULL,NULL;GNSS_Request,16,GNSSRequestQ_t,0,Dynamic,NULL,NULL;GNSS_Return,16,GNSSReturnQ_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=InitTask,3,1024,StartInitTask,Default,NULL,Dynamic,NULL,NULL;ReceivedLORA,0,2048,ReceivedLORATask,Default,NULL,Dynamic,NULL,NULL;UARTbyte_to_GN,2,512,UARTbyte_to_GNSSMessage_Task,Default,NULL,Dynamic,NULL,NULL;Matcher,0,1024,MatcherTask,Default,NULL,Dynamic,NULL,NULL;Fake_SDuse,0,512,Fake_SDuse_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Queues01=UARTbyte,1,uint8_t,0,Dynamic,NULL,NULL;UBXQueue,16,UBXMessageQ_t,0,Dynamic,NULL,NULL;GNSS_Request,16,GNSSRequestQ_t,0,Dynamic,NULL,NULL;GNSS_Return,16,GNSSReturnQ_t,0,Dynamic,NULL,NULL;UARTdebug,128,UARTdebugQ_t,0,Dynamic,NULL,NULL;GNSS_toPoll,16,GNSStoPollQ_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=InitTask,3,1024,StartInitTask,Default,NULL,Dynamic,NULL,NULL;ReceivedLORA,0,2048,ReceivedLORATask,Default,NULL,Dynamic,NULL,NULL;UARTbyte_to_GN,2,512,UARTbyte_to_GNSSMessage_Task,Default,NULL,Dynamic,NULL,NULL;Matcher,0,1024,MatcherTask,Default,NULL,Dynamic,NULL,NULL;Fake_SDuse,0,512,Fake_SDuse_Task,Default,NULL,Dynamic,NULL,NULL;UartDebug,0,512,UartDebugTask,Default,NULL,Dynamic,NULL,NULL;commandToGNSS,3,512,commandToGNSSTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
 FREERTOS.configMINIMAL_STACK_SIZE=512
 FREERTOS.configTOTAL_HEAP_SIZE=65536
@@ -50,19 +29,18 @@ KeepUserPlacement=false
 Mcu.CPN=STM32L496VGT3
 Mcu.Family=STM32L4
 Mcu.IP0=DAC1
-Mcu.IP1=DMA
-Mcu.IP10=USART2
-Mcu.IP11=USART3
-Mcu.IP12=USB_OTG_FS
-Mcu.IP2=FREERTOS
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SPI2
-Mcu.IP7=SYS
-Mcu.IP8=TIM2
-Mcu.IP9=USART1
-Mcu.IPNb=13
+Mcu.IP1=FREERTOS
+Mcu.IP10=USART3
+Mcu.IP11=USB_OTG_FS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SPI2
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=12
 Mcu.Name=STM32L496V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -122,8 +100,6 @@ Mcu.UserName=STM32L496VGTx
 MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.DMA1_Channel2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.DMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -394,7 +370,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC1_Init-DAC1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,10-MX_USART3_UART_Init-USART3-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DAC1_Init-DAC1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreq_Value=96000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -487,7 +463,8 @@ SPI2.VirtualType=VM_MASTER
 TIM2.IPParameters=Period,TIM_MasterSlaveMode
 TIM2.Period=0
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
-USART1.IPParameters=VirtualMode-Asynchronous,SwapParam
+USART1.BaudRate=921600 
+USART1.IPParameters=VirtualMode-Asynchronous,SwapParam,BaudRate
 USART1.SwapParam=ADVFEATURE_SWAP_ENABLE
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
