--- a/BASELIQ/BASELIQ.ioc
+++ b/BASELIQ/BASELIQ.ioc
@@ -116,7 +116,7 @@ NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=USB_VBUS_DETECT_WU
