--- a/LoRA_TC/LoRA_TC.ioc
+++ b/LoRA_TC/LoRA_TC.ioc
@@ -29,24 +29,27 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA7
-Mcu.Pin11=PB10
-Mcu.Pin12=PA9
-Mcu.Pin13=PA13 (JTMS-SWDIO)
-Mcu.Pin14=PA14 (JTCK-SWCLK)
-Mcu.Pin15=PB3 (JTDO-TRACESWO)
-Mcu.Pin16=PB6
-Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin18=VP_SYS_VS_tim1
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB10
+Mcu.Pin13=PA9
+Mcu.Pin14=PA13 (JTMS-SWDIO)
+Mcu.Pin15=PA14 (JTCK-SWCLK)
+Mcu.Pin16=PB3 (JTDO-TRACESWO)
+Mcu.Pin17=PB6
+Mcu.Pin18=PB8
+Mcu.Pin19=PB9
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
+Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin21=VP_SYS_VS_tim1
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
-Mcu.Pin9=PA6
-Mcu.PinsNb=19
+Mcu.Pin9=PA5
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -96,12 +99,17 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=GREEN_LED
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=SPI2_CS
 PA6.Locked=true
 PA6.Signal=GPIO_Output
-PA7.GPIOParameters=GPIO_Label
+PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA7.GPIO_Label=SPI2_IRQ
+PA7.GPIO_PuPd=GPIO_PULLDOWN
 PA7.Locked=true
 PA7.Signal=GPXTI7
 PA9.GPIOParameters=PinState,GPIO_Label
@@ -121,6 +129,18 @@ PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=SPI2_RST
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB8.GPIO_Label=LoRA2_IRQ
+PB8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB8.GPIO_PuPd=GPIO_PULLDOWN
+PB8.Locked=true
+PB8.Signal=GPXTI8
+PB9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB9.GPIO_Label=LoRA1_IRQ
+PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB9.GPIO_PuPd=GPIO_PULLDOWN
+PB9.Locked=true
+PB9.Signal=GPXTI9
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -158,7 +178,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -232,6 +252,10 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI2.CalculateBaudRate=2.5 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
